--- a/reflection/index.html
+++ b/reflection/index.html
@@ -10,14 +10,18 @@
 
 </head>
 <body>
+    <div class= "container">
+    <h3> Mirron Reflection</h3>
+    </div>
+    
+
     <div class="container">
-    <h3></h3>
-  
+ 
     <label for="w3review">
         The way I think speek and act today…
     </label>
 
-    <br><textarea id="w3review" name="w3review" rows="5" cols="50"></textarea>
+    <br><textarea id="w3review" name="w3review" ></textarea>
     <br><br><!-- 2-->
     
     <label for="w3review">
