--- a/index.html
+++ b/index.html
@@ -15,11 +15,20 @@
     <title>rorriM</title>
 </head>
 <body>
+
     <h1>Hello world </h1>
-    <div class="box">
-        <button type="button"><a href="reflection/index.html">Reflection</a></button>
-    </div> <div class="box">
-        <button type="button"><a href="milling/index.html">Milling</a></button>
+    <div class="flex-container">
+        <div >
+            <a href="reflection/index.html"><button type="button">ZEN :|</button></a>
+        </div>
+        <div class="box"><a href="milling/index.html"><button type="button">Milling</button></a>
+        </div>
+        <div class="box">
+            <a href="test/test.html"><button type="button">Test</button></a>
+        </div>
+        <div class="box">
+            <a href="milling/index.html"><button type="button">noting</button></a>
+        </div>
     </div>
 </body>
 </html>
