page based, ui elements done

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 </head>
 <body>
 
-    <h1>Hello world </h1>
+    <h3><center>Hello world</center> </h3>
     <div class="flex-container">
-        <div >
-            <a href="reflection/index.html"><button type="button">ZEN :|</button></a>
+        <div>
+            <a href="zen/index.html"><button type="button">Zen</button></a>
         </div>
-        <div class="box"><a href="milling/index.html"><button type="button">Milling</button></a>
+        <div class="box"><a href="milling/milling.html"><button type="button">Milling</button></a>
         </div>
         <div class="box">
             <a href="test/test.html"><button type="button">Test</button></a>
         </div>
         <div class="box">
-            <a href="milling/index.html"><button type="button">noting</button></a>
+            <a href="#"><button type="button">Noting</button></a>
         </div>
     </div>
 </body>
