--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <!-- possible content values: default, black or black-translucent -->
     <meta name="apple-mobile-web-app-status-bar-style"
     content="black-translucent">
+    
+    <!-- google fonts link  -->
+    <link href='https://fonts.googleapis.com/css?family=Permanent Marker' rel='stylesheet'>
+
+    <!-- my style sheet link -->
     <link rel="stylesheet" href="style.css">
     <title>MyApp</title>
 </head>
 <body>
 
-    <h3><center>Hello world</center> </h3>
+    <h1 class="flex-container"><span class="bgcl">MyApp</span></h1>
     <div class="flex-container">
         <div>
             <a href="zen/index.html"><button type="button">Zen</button></a>
@@ -27,7 +32,7 @@
             <a href="test/test.html"><button type="button">Test</button></a>
         </div>
         <div class="box">
-            <a href="#"><button type="button">Noting</button></a>
+            <a href="milling_2/index.html"><button type="button">Noting</button></a>
         </div>
     </div>
 </body>
