--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <h1 class="flex-container"><span class="bgcl">MyApp</span></h1>
+    <h1 class="flex-container"><span class="bgcl">MyApp<br> </span></h1>
     <div class="flex-container">
         <div>
             <a href="zen/index.html"><button type="button">Zen</button></a>
@@ -32,7 +32,7 @@
             <a href="test/test.html"><button type="button">Test</button></a>
         </div>
         <div class="box">
-            <a href="milling_2/index.html"><button type="button">Noting</button></a>
+            <a href="milling_2/index.html"><button type="button">Milling 2</button></a>
         </div>
     </div>
 </body>
