--- a/index.html
+++ b/index.html
@@ -1,39 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"; viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" ; viewport-fit="cover">
 
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- possible content values: default, black or black-translucent -->
-    <meta name="apple-mobile-web-app-status-bar-style"
-    content="black-translucent">
-    
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <!-- google fonts link  -->
     <link href='https://fonts.googleapis.com/css?family=Permanent Marker' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
+    <!-- bootstrap -------------------------------------------------------- -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+    <!-- fontawesome icon bootstrap  -->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+
+    <!-- vue -->
+    <script src="https://unpkg.com/vue@next"></script>
 
     <!-- my style sheet link -->
     <link rel="stylesheet" href="style.css">
     <title>MyApp</title>
 </head>
-<body>
 
-    <h1 class="flex-container"><span class="bgcl">MyApp<br> </span></h1>
-    <div class="flex-container">
+<body>
+    <div id="app" class="">
         <div>
-            <a href="zen/index.html"><button type="button">Zen</button></a>
-        </div>
-        <div class="box"><a href="milling/milling.html"><button type="button">Milling</button></a>
-        </div>
-        <div class="box">
-            <a href="test/test.html"><button type="button">Test</button></a>
-        </div>
-        <div class="box">
-            <a href="milling_2/index.html"><button type="button">Milling 2</button></a>
+
+            <div class="navbar navbar-dark bg-dark absalute text-light">
+                <div class="container">
+                    <a href="#" class="navbar-brand shadow" style="font-family: 'Smooch', cursive; font-size:x-large;">
+                        my App</a>
+                    <div>
+                        <i class="bi bi-caret-down"></i>
+                    </div>
+                    <div class="float-end position-relative">
+                        <div class="btn text-light " :class="[navshow? 'btn-outline-secondary':'' ]"
+                            @click="navshow =!navshow">
+                            <svg v-show="!navshow" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z" />
+                            </svg><svg v-show="navshow" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-chevron-compact-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M7.776 5.553a.5.5 0 0 1 .448 0l6 3a.5.5 0 1 1-.448.894L8 6.56 2.224 9.447a.5.5 0 1 1-.448-.894l6-3z" />
+                            </svg>
+                        </div>
+                        <div class="container">
+                            <div class=" d-flex flex-column float-end  justify-content-around  small card nav-dropdown "
+                                v-if="navshow">
+
+                                <div v-for="(link,i) in dashLinks" class="bg-light ">
+                                    <div class="py-2">
+                                        <a class="link-dark px-4 text-decoration-none " :href="link.link">
+                                            {{link.label}}
+                                        </a>
+                                    </div>
+                                    <hr class="m-0 p-0">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container mt-4" @click="navshow=false">
+                <h2>Dashboard</h2>
+
+                <div class="mt-5 main d-flex flex-wrap justify-content-around text-center">
+                    <div class="card m-2 mb-4 w-auto">
+                        <div class="card-header  p-0">hello</div>
+                        <div class="card-body text-start" >
+                            <h3>title</h3>
+                            <p> thos is tha boddy</p>
+                        </div>
+                    </div>
+                    <div class="card m-2 w-auto">
+                        <div class="card-header  p-0">hello</div>
+                        <div class="card-body text-start" >
+                            <h3>title</h3>
+                            <p> thos is tha boddy</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
