--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
                             <div class=" d-flex flex-column float-end  justify-content-around  small card nav-dropdown "
                                 v-if="navshow">
 
-                                <div v-for="(link,i) in dashLinks" class="bg-light ">
-                                    <div class="py-2">
-                                        <a class="link-dark px-4 text-decoration-none " :href="link.link">
+                                <div v-for="(link,i) in dashLinks" class=" ">
+                                    <a class="text-decoration-none " :href="link.link">
+                                            <div class="py-1 link-dark px-4 bg-light">
                                             {{link.label}}
+                                        </div>
                                         </a>
-                                    </div>
-                                    <hr class="m-0 p-0">
                                 </div>
                             </div>
                         </div>
@@ -87,19 +86,19 @@
             <div class="container mt-4" @click="navshow=false">
                 <h2>Dashboard</h2>
 
-                <div class="mt-5 main d-flex flex-wrap justify-content-around text-center">
-                    <div class="card m-2 mb-4 w-auto">
+                <div class="mt-5 main d-flex flex-wrap align-self-start justify-content-around text-center">
+                    <div class="card m-2 mb-4 w-auto dashcard">
                         <div class="card-header  p-0">hello</div>
                         <div class="card-body text-start" >
                             <h3>title</h3>
                             <p> thos is tha boddy</p>
                         </div>
                     </div>
-                    <div class="card m-2 w-auto">
+                    <div class="card m-2 mb-4 w-auto dashcard">
                         <div class="card-header  p-0">hello</div>
                         <div class="card-body text-start" >
                             <h3>title</h3>
-                            <p> thos is tha boddy</p>
+                            <p> thos is tha boddy aasdf adsfasd</p>
                         </div>
                     </div>
                 </div>
